# DataAnalyst_Portfolio

./: .gitignore  README.md  index.html
.github/workflows/: update-weather.yml
Telecom Customer Churn Analysis/: Read.me
weather-data-tracker/: README.md  main.py  pyproject.toml  test_plot.py  view_data.py  weather_data.db
weather-data-tracker/.github/workflows/: update-weather.yml
weather-data-tracker/live_weather/: index.html
weather-data-tracker/python_app/: .env.sample  main.py  pyproject.toml  requirements.txt
weather-data-tracker/python_app/src/: cleaner.py  config.py  database.py  fetcher.py  reporter.py  visualizer.py
weather-data-tracker/src/: analyzer.py  cleaner.py  config.py  database.py  fetch_current.py  fetch_forecast.py  fetch_pollution.py  fetcher.py  geo.py  geocode.py  reporter.py  visualizer.py
weather-data-tracker/test/: test_current.py  test_forecast.py  test_pollution.py
