[tool.poetry]
name = "weather-data-tracker"
version = "0.1.0"
description = ""
authors = ["swathi-valluri <swathi.valluri@outlook.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
python-dotenv = "^1.1.0"
requests = "^2.32.3"
matplotlib = "^3.10.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
